unpackaged/main/default/objects/Service_Only_Consulting_Request__c/Service_Only_Consulting_Request__c.object-meta.xml
<CustomObject>
    <description>Resource/Rate information for Service Only/Consulting Request Opportunity type</description>
    <label>Service Only/Consulting Request</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Only/Consulting Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>