unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Date_End__c.field-meta.xml
<CustomField>
    <fullName>Date_End__c</fullName>
    <label>Date End</label>
    <type>Date</type>
</CustomField>