unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Start__c</fullName>
    <label>Date Start</label>
    <type>Date</type>
</CustomField>