unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Task Description</label>
    <type>TextArea</type>
</CustomField>