unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Service Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>