unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/No_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Days__c</fullName>
    <label>No. Days</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>