unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Rate_Day__c.field-meta.xml
<CustomField>
    <fullName>Rate_Day__c</fullName>
    <description>Daily Rate. Please see the Rate Guide on help</description>
    <inlineHelpText>Rate Guide - Australia
Project Manager - $2325
Principal Cons - $2325
Senior Cons - $2060
Cons - $1960
Tech - $1960
Weekend Surcharge - $980
Will default value from account once saved. Can override if needed.</inlineHelpText>
    <label>Consulting Rate/Day</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>