unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Technology One Employee</value>
        </filterItems>
        <infoMessage>Search Technology One Employees</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Only/Consulting Request</relationshipLabel>
    <relationshipName>Service_Only_Consulting_Request</relationshipName>
    <type>Lookup</type>
</CustomField>