unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Specific_Resource_Required__c.field-meta.xml
<CustomField>
    <fullName>Specific_Resource_Required__c</fullName>
    <description>Specific Resource Required</description>
    <label>Specific Resource Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>