unpackaged/main/default/objects/Service_Only_Consulting_Request__c/fields/Total_value__c.field-meta.xml
<CustomField>
    <fullName>Total_value__c</fullName>
    <description>No_Days__c  *  Rate_Day__c</description>
    <formula>No_Days__c  *  Rate_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Days * Daily rate</inlineHelpText>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>