unpackaged/main/default/objects/Service_Only_Consulting_Request__c/validationRules/Date_Start_can_not_be_more_than_Date_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Start_can_not_be_more_than_Date_End</fullName>
    <active>true</active>
    <description>Date Start can not be more than Date End.</description>
    <errorConditionFormula>Date_Start__c &gt; Date_End__c</errorConditionFormula>
    <errorDisplayField>Date_End__c</errorDisplayField>
    <errorMessage>Date Start can not be more than Date End!</errorMessage>
</ValidationRule>