unpackaged/main/default/objects/Service_Only_Consulting_Request__c/validationRules/Num_Days_More_Than_Start_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Num_Days_More_Than_Start_and_End_Date</fullName>
    <active>true</active>
    <description>Number of Days entered more than End Date - Start Date</description>
    <errorConditionFormula>No_Days__c &gt; (Date_End__c - Date_Start__c )+1</errorConditionFormula>
    <errorDisplayField>No_Days__c</errorDisplayField>
    <errorMessage>Number of Days entered more than End Date - Start Date!</errorMessage>
</ValidationRule>